--- a/qbook-social-media-node-js/package.json
+++ b/qbook-social-media-node-js/package.json
@@ -4,16 +4,20 @@
     "scripts": {
         "start": "node --env-file=.env.production dist/index.js",
         "build": "tsc",
-        "dev": "bun --watch --env-file=.env.development src/index.ts"
+        "dev": "bun --watch --env-file=.env.development src/index.ts",
+        "test-utils": "bun src/test.ts"
     },
     "license": "MIT",
     "dependencies": {
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "express": "^4.21.2",
+        "ioredis": "^5.4.2",
         "jsonwebtoken": "^9.0.2",
+        "lodash": "^4.17.21",
         "mongoose": "^8.8.4",
         "morgan": "^1.10.0",
+        "nodemailer": "^6.9.16",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
         "winston": "^3.17.0"
@@ -22,9 +26,12 @@
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
+        "@types/ioredis": "^4.28.10",
         "@types/jsonwebtoken": "^9.0.7",
+        "@types/lodash": "^4.17.13",
         "@types/morgan": "^1.9.9",
         "@types/node": "^22.10.2",
+        "@types/nodemailer": "^6.4.17",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.7",
         "ts-node": "^10.9.2",
