--- a/image-server/package.json
+++ b/image-server/package.json
@@ -7,12 +7,14 @@
         "dev": "bun run --watch --env-file=.env  src/index.ts"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.3"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/multer": "^1.4.12",
         "@types/node": "^22.10.3",
