--- a/qbook-social-media-node-js/package.json
+++ b/qbook-social-media-node-js/package.json
@@ -11,9 +11,12 @@
     "license": "MIT",
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "date-fns": "^4.1.0",
         "express": "^4.21.2",
+        "fs": "^0.0.1-security",
+        "https": "^1.0.0",
         "ioredis": "^5.4.2",
         "jsonwebtoken": "^9.0.2",
         "lodash": "^4.17.21",
@@ -29,6 +32,7 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.8",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/ioredis": "^4.28.10",
