update: update open api

--- a/qbook-social-media-node-js/src/openapi/path/auth.yaml
+++ b/qbook-social-media-node-js/src/openapi/path/auth.yaml
@@ -144,7 +144,7 @@ RegisterVerify:
                                 type: string
                                 description: OTP code
                                 example: 123456
-                            twoFaToken:
+                            activeToken:
                                 type: string
                                 description: Two factor authentication token
 
