--- a/qbook-social-media-node-js/package.json
+++ b/qbook-social-media-node-js/package.json
@@ -10,6 +10,7 @@
     },
     "license": "MIT",
     "dependencies": {
+        "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
@@ -22,6 +23,7 @@
         "lodash": "^4.17.21",
         "mongoose": "^8.8.4",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.16",
         "nodemon": "3.1.9",
         "swagger-cli": "^4.0.4",
@@ -39,6 +41,7 @@
         "@types/jsonwebtoken": "^9.0.7",
         "@types/lodash": "^4.17.13",
         "@types/morgan": "^1.9.9",
+        "@types/multer": "^1.4.12",
         "@types/node": "^22.10.2",
         "@types/nodemailer": "^6.4.17",
         "@types/swagger-jsdoc": "^6.0.4",
