--- a/message-server/package.json
+++ b/message-server/package.json
@@ -7,8 +7,13 @@
         "dev": "bun run --watch src/index.ts"
     },
     "dependencies": {
+        "axios": "^1.7.9",
+        "cors": "^2.8.5",
         "express": "^4.21.2",
         "mongoose": "^8.9.3",
         "socket.io": "^4.8.1"
+    },
+    "devDependencies": {
+        "@types/express": "^5.0.0"
     }
 }
