--- a/deploy-server/package.json
+++ b/deploy-server/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "axios": "^1.7.9",
-        "mongoose": "^8.9.5"
+        "mongoose": "^8.9.5",
+        "uuid": "^11.0.5"
     }
 }
