--- a/qbook-social-media-node-js/package.json
+++ b/qbook-social-media-node-js/package.json
@@ -10,6 +10,7 @@
     },
     "license": "MIT",
     "dependencies": {
+        "@faker-js/faker": "^9.4.0",
         "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.7",
@@ -26,6 +27,7 @@
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.16",
         "nodemon": "3.1.9",
+        "stripe": "^17.6.0",
         "swagger-cli": "^4.0.4",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
