--- a/qbook-social-media-node-js/package.json
+++ b/qbook-social-media-node-js/package.json
@@ -27,6 +27,7 @@
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.16",
         "nodemon": "3.1.9",
+        "socket.io": "^4.7.5",
         "stripe": "^17.6.0",
         "swagger-cli": "^4.0.4",
         "swagger-jsdoc": "^6.2.8",
