--- a/image-server/package.json
+++ b/image-server/package.json
@@ -4,14 +4,17 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "dev": "bun run --watch --env-file=.env  src/index.ts"
+        "dev": "bun run --watch --env-file=.env  src/index.ts",
+        "build": "tsc --noCheck",
+        "start": "node  --env-file=.env dist/index.js"
     },
     "dependencies": {
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "multer": "^1.4.5-lts.1",
-        "node-cron": "^3.0.3"
+        "node-cron": "^3.0.3",
+        "sharp": "^0.33.5"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
