--- a/message-server/package.json
+++ b/message-server/package.json
@@ -4,7 +4,9 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "dev": "bun run --watch src/index.ts"
+        "dev": "bun run --watch src/index.ts",
+        "build": "tsc --noEmitOnError false",
+        "start": "node dist/index.js"
     },
     "dependencies": {
         "axios": "^1.7.9",
