--- a/deploy-server/package.json
+++ b/deploy-server/package.json
@@ -4,7 +4,9 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "bun run --watch src/index.ts"
+        "dev": "bun run --watch src/index.ts",
+        "build": "tsc --noCheck",
+        "start": "node ./dist/index.js"
     },
     "keywords": [],
     "author": "",
@@ -12,6 +14,7 @@
     "type": "commonjs",
     "description": "",
     "devDependencies": {
+        "@types/cors": "^2.8.17",
         "@types/decompress": "^4.2.7",
         "@types/express": "^5.0.0",
         "@types/multer": "^1.4.12",
@@ -24,6 +27,7 @@
     },
     "dependencies": {
         "axios": "^1.7.9",
+        "cors": "^2.8.5",
         "mongoose": "^8.9.5",
         "uuid": "^11.0.5"
     }
